# Piccolo

cmake/: GenerateShaderCPPFile.cmake  ShaderCompile.cmake
engine/: CMakeLists.txt
engine/shader/glsl/: color_grading.frag  combine_ui.frag  vignette.frag  vignette.vert
engine/source/meta_parser/parser/: main.cpp
engine/source/runtime/core/meta/reflection/: reflection.cpp  reflection.h
engine/source/runtime/function/framework/component/lua/: lua_component.cpp
engine/source/runtime/function/framework/component/motor/: motor_component.cpp
engine/source/runtime/function/framework/object/: object_id_allocator.cpp
engine/source/runtime/function/render/: render_pipeline.cpp  render_resource.h
engine/source/runtime/function/render/interface/vulkan/: vulkan_rhi.cpp
engine/source/runtime/function/render/passes/: directional_light_pass.cpp  main_camera_pass.cpp  main_camera_pass.h  pick_pass.cpp  vignette_pass.cpp
engine/source/runtime/resource/res_type/components/: motor.h
